--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="styles/style.css">
   <title>Frontend Mentor | Single Price Grid Component</title>
 
@@ -16,35 +20,42 @@
   </style>
 </head>
 <body>
-  Join our community
+  <div class="container">
+    <div class="component">
+      <div class="community">
+        <h1>Join our community</h1>
+        <h2>30-day, hassle-free money back guarantee</h2>
+        <p>Gain access to our full library of tutorials along with expert code reviews.</p>
+        <p>Perfect for any developers who are serious about honing their skills.</p>
+      </div>
+      <div class="bottom">
+        <div class="subscription">
+          <h2>Monthly Subscription</h2>
+          <div class="price">
+            <strong>&dollar;29</strong>
+            <span>per month</span>
+          </div>
+          <p>Full access for less than &dollar;1 a day</p>
+          <button class="sign-up">Sign Up</button>
+        </div>
+        <div class="why-us">
+          <h2>Why Us</h2>
+          <p>Tutorials by industry experts</p>
+          <p>Peer &amp; expert code review</p>
+          <p>Coding exercises</p>
+          <p>Access to our GitHub repos</p>
+          <p>Community forum</p>
+          <p>Flashcard decks</p>
+          <p>New videos every week</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/AhmedMikkawe">Ahmed Mikkawe</a>.
     </p>
   </footer>
 </body>
